Hopefully fix mobile link overflow issue

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -156,6 +156,7 @@ hr {
 
 a {
 	color: #A490E9;
+	word-break: break-word;
 
 	&:hover {
 		color: #815af5;
